# Xbotics-O20

./: .gitignore  PRODUCTIZATION_PROGRESS.md  README.md  README.txt  pyproject.toml  requirements-camera.txt  requirements.txt  run_console.py
resources/canfd/win-x64/: README.md
resources/urdf/: urdf_viewer.js
resources/urdf/model/meshes/: index_metacarpals_Link.STL  index_proximal_Link.STL  middle_metacarpals_Link.STL  middle_proximal_Link.STL  pinky_metacarpals_Link.STL  pinky_proximal_Link.STL  ring_metacarpals_Link.STL  ring_proximal_Link.STL  thumb_metacarpals_Link.STL  thumb_metacarpals_base1_Link.STL  thumb_metacarpals_base2_Link.STL
resources/urdf/model/urdf/: R20V10.6(完整)-jian24.urdf
runtime/: config.json
runtime/action_library/: actions.json
src/xbotics_o20/: __init__.py  actions.py  backends.py  camera_service.py  canfd_diag.py  canfd_driver.py  cli.py  config.py  desktop_app.py  desktop_console.py  device_scan.py  joints.py  macro_service.py  native_libs.py  native_o20.py  player.py  process_lock.py  teleop.py  udev_rules.py
tests/: test_actions_player.py  test_backends.py  test_camera_service.py  test_canfd_diag.py  test_cli.py  test_config.py  test_desktop_console.py  test_joints.py  test_teleop.py  test_udev_rules.py  test_urdf_twin_assets.py
