[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbotics-o20"
version = "0.1.4"
description = "Cross-platform desktop console for Xbotics O20 dexterous hand"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6", "opencv-python>=4.12.0", "mediapipe>=0.10.33"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
xbotics-o20 = "xbotics_o20.cli:main"
xbotics-o20-console = "xbotics_o20.desktop_console:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/xbotics_o20/assets" = ["assets/hand_landmarker.task"]
"share/xbotics_o20/runtime" = ["runtime/config.json"]
"share/xbotics_o20/runtime/action_library" = ["runtime/action_library/actions.json"]
"share/xbotics_o20/resources/canfd/win-x64" = ["resources/canfd/win-x64/HCanbus.dll", "resources/canfd/win-x64/README.md"]
"share/xbotics_o20/resources/urdf" = ["resources/urdf/urdf_viewer.js"]
"share/xbotics_o20/resources/urdf/model/urdf" = ["resources/urdf/model/urdf/R20V10.6(完整)-jian24.urdf"]
"share/xbotics_o20/resources/urdf/model/meshes" = [
    "resources/urdf/model/meshes/hand_link.STL",
    "resources/urdf/model/meshes/index_distal_Link.STL",
    "resources/urdf/model/meshes/index_metacarpals_Link.STL",
    "resources/urdf/model/meshes/index_proximal_Link.STL",
    "resources/urdf/model/meshes/middle_distal_Link.STL",
    "resources/urdf/model/meshes/middle_metacarpals_Link.STL",
    "resources/urdf/model/meshes/middle_proximal_Link.STL",
    "resources/urdf/model/meshes/pinky_distal_Link.STL",
    "resources/urdf/model/meshes/pinky_metacarpals_Link.STL",
    "resources/urdf/model/meshes/pinky_proximal_Link.STL",
    "resources/urdf/model/meshes/ring_distal_Link.STL",
    "resources/urdf/model/meshes/ring_metacarpals_Link.STL",
    "resources/urdf/model/meshes/ring_proximal_Link.STL",
    "resources/urdf/model/meshes/thumb_metacarpals_base1_Link.STL",
    "resources/urdf/model/meshes/thumb_metacarpals_base2_Link.STL",
    "resources/urdf/model/meshes/thumb_metacarpals_Link.STL",
    "resources/urdf/model/meshes/thumb_proximal_Link.STL",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
